ff-macros/tests/object_failures/no_id_field.rs
use ff_macros::*;

#[derive(Object)]
struct Test {
	not_id: i32,
	also_not_id: bool,
}

fn main() {}